# nodaysidle-MDNote

./: README.md  package-lock.json  package.json  verbose_build_log.txt  verbose_build_log_2.txt
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  build.rs  build_log_cleanup_and_fix.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: base.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backlink.rs  folder.rs  mod.rs  note.rs  search.rs  settings.rs  tag.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/migrations/: 001_notes_folders.sql  002_tags.sql  003_fts5.sql  004_backlinks_settings.sql  005_tags_color.sql
src-tauri/src/models/: folder.rs  mod.rs  note.rs  settings.rs  tag.rs
src-tauri/src/services/: backlink.rs  database.rs  folder.rs  mod.rs  note.rs  search.rs  settings.rs  tag.rs
src/components/: BacklinkPanel.tsx  CommandPalette.tsx  Editor.tsx  LoadingSkeleton.tsx  SettingsModal.tsx  Sidebar.tsx
src/hooks/: useBacklinks.ts  useFolders.ts  useNotes.ts  useSettings.ts  useTags.ts
src/types/: index.ts
